# trac_ik-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/trac_ik/: trac_ik.hpp  trac_ik_kinematics_plugin.hpp
rpm/: ros-rolling-trac-ik-kinematics-plugin.spec  ros-rolling-trac-ik-lib.spec  ros-rolling-trac-ik.spec  template.spec
src/: trac_ik_kinematics_plugin.cpp
trac_ik/: CHANGELOG.rst  package.xml
trac_ik_kinematics_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
trac_ik_kinematics_plugin/include/trac_ik/: trac_ik_kinematics_plugin.hpp
trac_ik_kinematics_plugin/src/: trac_ik_kinematics_parameters.yaml  trac_ik_kinematics_plugin.cpp
trac_ik_lib/: CHANGELOG.rst  CMakeLists.txt  package.xml
trac_ik_lib/include/trac_ik/: nlopt_ik.hpp  trac_ik.hpp
trac_ik_lib/src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
